Update and rename wish.html to index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     .balloon1 {
       left: 8%;
-      background-image: url("C:\Users\sneha\OneDrive\Desktop\Crush birthday wish\image\Kuhu1.jpg");
+      background-image: url("Kuhu 1.jpg");
       background-size: contain;
       background-size: cover;
       animation-delay: 0s;
@@ -71,14 +71,14 @@
 
     .balloon2 {
       left: 38%;
-      background-image: url(aria2.jpg);
+      background-image: url("Kuhu 2.jpg");
       background-size: cover;
       animation-delay: 1s;
     }
 
     .balloon3 {
       right: 8%;
-      background-image: url(aria1.jpg);
+      background-image: url("Kuhu 3.jpg");
       background-size: cover;
       animation-delay: 3s;
     }
