--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="Designed by StudyMuch 'Shubham'">
+  <meta name="author" content="Designed by Sis">
   <title>Birthday Card</title>
   <style type="text/css" media="all">
     @import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&family=League+Spartan:wght@100..900&display=swap');
@@ -173,8 +173,8 @@
       <div class="balloon balloon3"></div>
     </div>
     <div class="card-content">
-      <h1>Happy Birthday, My Love!</h1>
-      <p>Happy Birthday to the love of my life! I hope this day is as special as you are. Wishing you the happiest of
+      <h1>Happy Birthday, My Friend!💗</h1>
+      <p>Happy Birthday to the Friend!💗 I hope this day is as special as you are. Wishing you the happiest of
         birthdays, You brighten my life every day.</p>
       <button onclick="showSurprise()">Show Surprise</button>
       <p class="hidden-surprise" id="surprise">Join me for a magical candlelight 💗Dinner Tonight💗</p>
